feat: 1.完善swagger注释模板 2.Custom Error Class
